--- a/_posts/04.Pyhon 시각화/05.Pandas 시각화/2023-10-12-00.Pandas 시각화.md
+++ b/_posts/04.Pyhon 시각화/05.Pandas 시각화/2023-10-12-00.Pandas 시각화.md
@@ -54,9 +54,8 @@ plt.show()
 ```
 
 
-​    
-![png](output_4_0.png)
-​    
+![output_4_0](/../../images/2023-10-12-00.Pandas 시각화/output_4_0.png)
+    
 
 
 
@@ -73,9 +72,8 @@ s.plot.bar()
 
 
 
-​    
-![png](output_5_1.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_5_1.png)
+    
 
 
 matplotlib를 이용해 여러 설정들 가능
@@ -85,6 +83,10 @@ matplotlib를 이용해 여러 설정들 가능
 
 
 ```python
+import pandas as pd
+import numpy as np
+import matplotlib.pyplot as plt
+
 tips = pd.read_csv('data/tips.csv')
 tips.shape
 ```
@@ -123,9 +125,8 @@ plt.ylim(0, 170);
 ```
 
 
-​    
-![png](output_10_0.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_10_0.png)
+    
 
 
 
@@ -136,9 +137,8 @@ tips['sex'].value_counts().plot(kind='bar', title='성별 테이블수', ylabel=
 ```
 
 
-​    
-![png](output_11_0.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_11_0.png)
+    
 
 
 
@@ -149,9 +149,8 @@ tips['smoker'].value_counts().plot(kind='barh', rot=45, title='흡연');
 ```
 
 
-​    
-![png](output_12_0.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_12_0.png)
+    
 
 
 - 두개의 분류 별로 그리기
@@ -227,9 +226,8 @@ count_df.plot(kind='bar')
 
 
 
-​    
-![png](output_15_1.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_15_1.png)
+    
 
 
 
@@ -240,9 +238,8 @@ plt.legend(bbox_to_anchor=(1,1), loc='upper left', title='흡연여부', fontsiz
 ```
 
 
-​    
-![png](output_16_0.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_16_0.png)
+    
 
 
 
@@ -252,9 +249,8 @@ plt.legend(bbox_to_anchor=(1, 1), loc='upper left', fontsize=14, title='요일')
 ```
 
 
-​    
-![png](output_17_0.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_17_0.png)
+    
 
 
 
@@ -264,9 +260,8 @@ plt.show()
 ```
 
 
-​    
-![png](output_18_0.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_18_0.png)
+    
 
 
 
@@ -277,9 +272,8 @@ plt.legend(bbox_to_anchor=(1, 1), loc='upper left', fontsize=14, title='요일')
 ```
 
 
-​    
-![png](output_19_0.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_19_0.png)
+    
 
 
 ## 파이차트
@@ -328,30 +322,27 @@ plt.legend(bbox_to_anchor=(1,1), fontsize=14, loc='upper left')
 ```
 
 
-
-
-    ''
-
-
-
-
-​    
-![png](output_23_1.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_23_1.png)
+    
 
 
 ## 히스토그램, KDE(밀도그래프)
 
 
 ```python
+import pandas as pd
+import numpy as np
+import matplotlib.pyplot as plt
+
+tips = pd.read_csv('data/tips.csv')
+
 tips['total_bill'].plot(kind='hist',bins=30) # bins=[0,10,20,25,30,50]
 plt.show()
 ```
 
 
-​    
-![png](output_25_0.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_25_0-1697174792117-91.png)
+    
 
 
 
@@ -362,9 +353,8 @@ plt.legend(fontsize=14, bbox_to_anchor=[1,1], loc='upper left');
 ```
 
 
-​    
-![png](output_26_0.png)
-​    
+![output_26_0](/../../images/2023-10-12-00.Pandas 시각화/output_26_0.png)
+    
 
 
 
@@ -383,9 +373,7 @@ tips['total_bill'].plot(kind='kde');
 ```
 
 
-​    
-![png](output_28_0.png)
-​    
+​    ![output_28_0](/../../images/2023-10-12-00.Pandas 시각화/output_28_0.png)
 
 
 
@@ -394,15 +382,20 @@ tips[['total_bill', 'tip']].plot.kde(alpha=0.5);
 ```
 
 
-​    
-![png](output_29_0.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_29_0.png)
+    
 
 
 ## Boxplot (상자그래프)
 
 
 ```python
+import pandas as pd
+import numpy as np
+import matplotlib.pyplot as plt
+
+tips = pd.read_csv('data/tips.csv')
+
 # whis: 정상범위 늘리기 줄이기 - Default: 1.5
 tips['total_bill'].plot(kind='box', whis=1)
 
@@ -410,9 +403,8 @@ plt.show()
 ```
 
 
-​    
-![png](output_31_0.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_31_0.png)
+    
 
 
 
@@ -422,24 +414,28 @@ tips[['total_bill', 'tip']].plot.box();
 ```
 
 
-​    
-![png](output_32_0.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_32_0.png)
+    
 
 
 ## scatter plot (산점도) 
 
 
 ```python
+import pandas as pd
+import numpy as np
+import matplotlib.pyplot as plt
+
+tips = pd.read_csv('data/tips.csv')
+
 # DF.plot(kind='scatter', x='컬럼명', y='컬럼명')
 ## x, y => 양의 상관관계
 tips.plot.scatter(x='total_bill', y='tip');
 ```
 
 
-​    
-![png](output_34_0.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_34_0.png)
+    
 
 
 
@@ -1277,14 +1273,15 @@ df
 
 
 ```python
+import matplotlib.pyplot as plt
+
 # Line plot 변화흐름 확인 => plot - Default: line
 df.loc['2009-01-01'].plot(figsize=(10,4));
 ```
 
 
-​    
-![png](output_68_0.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_68_0.png)
+    
 
 
 
@@ -1293,9 +1290,8 @@ df['봄'].plot(figsize=(10,4));
 ```
 
 
-​    
-![png](output_69_0.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_69_0.png)
+    
 
 
 
@@ -1305,9 +1301,8 @@ df[['봄','겨울']].plot(figsize=(10,4));
 ```
 
 
-​    
-![png](output_70_0.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_70_0.png)
+    
 
 
 
@@ -1318,14 +1313,6 @@ plt.legend(bbox_to_anchor=(1,1), loc='upper left', fontsize='14')
 ```
 
 
-
-
-    ''
-
-
-
-
-​    
-![png](output_71_1.png)
-​    
+![png](/../../images/2023-10-12-00.Pandas 시각화/output_71_1.png)
+    
 
