--- a/_posts/04.Pyhon 시각화/06.Seaborn/2023-10-12-00.SeaBorn.md
+++ b/_posts/04.Pyhon 시각화/06.Seaborn/2023-10-12-00.SeaBorn.md
@@ -1,19 +1,20 @@
 ---
 layout: single
-title: '변수와 연산자'
+title: 'SeaBorn'
 typora-root-url: ../
+categories: Python시각화.06.SeaBorn
+tag: Python시각화
+toc: true
 ---
 
 # Seaborn
 - matplotlib을 기반으로 다양한 테마와 그래프를 제공하는 파이썬 시각화 패키지.-
-- http://seaborn.pydata.org/
-    - 공식 사이트의 [gallary](http://seaborn.pydata.org/examples/index.html)에 제공하는 다양한 그래프와 예제를 확인 할 수 있다.
 - 설치: 아나콘다에는 포함되있다.
 ```
 pip install seaborn
 conda install seaborn
 ```
-    
+
 
 
 ```python
@@ -31,7 +32,6 @@ import matplotlib.pyplot as plt
 # 경고 무시
 import warnings
 warnings.filterwarnings(action='ignore')
-
 ```
 
 
@@ -59,8 +59,7 @@ plt.show()
 ```
 
 
-    
-![png](output_6_0.png)
+![output_6_0](/../../images/2023-10-12-00.SeaBorn/output_6_0.png)![png](output_6_0.png)
     
 
 
@@ -75,8 +74,7 @@ plt.show()
 ```
 
 
-    
-![png](output_8_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_8_0.png)
     
 
 
@@ -88,8 +86,7 @@ plt.show()
 ```
 
 
-    
-![png](output_9_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_9_0.png)
     
 
 
@@ -103,8 +100,7 @@ plt.show()
 ```
 
 
-    
-![png](output_11_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_11_0.png)
     
 
 
@@ -118,8 +114,7 @@ plt.show()
 ```
 
 
-    
-![png](output_12_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_12_0.png)
     
 
 
@@ -149,8 +144,7 @@ plt.show()
 ```
 
 
-    
-![png](output_15_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_15_0.png)
     
 
 
@@ -200,8 +194,7 @@ plt.show()
 ```
 
 
-    
-![png](output_17_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_17_0.png)
     
 
 
@@ -224,8 +217,7 @@ plt.show()
 ```
 
 
-    
-![png](output_19_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_19_0.png)
     
 
 
@@ -247,8 +239,7 @@ plt.show()
 ```
 
 
-    
-![png](output_21_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_21_0.png)
     
 
 
@@ -260,8 +251,7 @@ plt.show()
 ```
 
 
-    
-![png](output_22_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_22_0.png)
     
 
 
@@ -285,8 +275,7 @@ v.plot(kind='bar')
 
 
 
-    
-![png](output_24_1.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_24_1.png)
     
 
 
@@ -308,8 +297,7 @@ plt.show()
 ```
 
 
-    
-![png](output_25_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_25_0.png)
     
 
 
@@ -324,8 +312,7 @@ plt.show()
 ```
 
 
-    
-![png](output_26_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_26_0.png)
     
 
 
@@ -371,8 +358,7 @@ plt.show()
 ```
 
 
-    
-![png](output_33_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_33_0.png)
     
 
 
@@ -386,8 +372,7 @@ plt.show()
 ```
 
 
-    
-![png](output_35_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_35_0.png)
     
 
 
@@ -408,7 +393,7 @@ tips[['total_bill', 'tip']].corr()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -445,8 +430,7 @@ plt.show()
 ```
 
 
-    
-![png](output_37_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_37_0.png)
     
 
 
@@ -457,8 +441,7 @@ plt.show()
 ```
 
 
-    
-![png](output_38_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_38_0.png)
     
 
 
@@ -475,8 +458,7 @@ plt.show()
 ```
 
 
-    
-![png](output_40_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_40_0.png)
     
 
 
@@ -489,8 +471,7 @@ plt.show()
 ```
 
 
-    
-![png](output_41_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_41_0.png)
     
 
 
@@ -507,8 +488,7 @@ plt.show()
 ```
 
 
-    
-![png](output_43_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_43_0.png)
     
 
 
@@ -529,7 +509,7 @@ tips
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -687,7 +667,7 @@ cor
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -790,8 +770,7 @@ plt.show()
 ```
 
 
-    
-![png](output_47_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_47_0.png)
     
 
 
@@ -821,7 +800,7 @@ df
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -917,8 +896,7 @@ plt.show()
 ```
 
 
-    
-![png](output_50_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_50_0.png)
     
 
 
@@ -937,7 +915,6 @@ plt.show()
 ```
 
 
-    
-![png](output_51_0.png)
+![png](/../../images/2023-10-12-00.SeaBorn/output_51_0.png)
     
 
