--- a/_posts/05.Numpy/01.Numpy/2023-10-13-00.Numpy.md
+++ b/_posts/05.Numpy/01.Numpy/2023-10-13-00.Numpy.md
@@ -2,6 +2,9 @@
 layout: single
 title: '변수와 연산자'
 typora-root-url: ../
+categories: Numpy.01.
+tag: Numpy
+toc: true
 ---
 
 # 넘파이 (Numpy) 
@@ -118,7 +121,7 @@ a1
 
     <class 'numpy.ndarray'>
     [  1   5   2  20 100   2]
-    
+
 
 
 
@@ -141,7 +144,7 @@ a2
     [[1 2]
      [3 4]
      [5 6]]
-    
+
 
 
 
@@ -160,7 +163,7 @@ print('배열의 타입:', a1.dtype, a2.dtype)
 ```
 
     배열의 타입: int32 int32
-    
+
 
  ### Shape : 축별 원소수를 Tuple로 반환
 
@@ -170,7 +173,7 @@ print(a1.shape, a2.shape)
 ```
 
     (6,) (3, 2)
-    
+
 
 ### Size : 총 원수 개수
 
@@ -180,7 +183,7 @@ print(a1.size, a2.size)
 ```
 
     6 6
-    
+
 
 ### Rank : 차원수
 
@@ -190,7 +193,7 @@ print('차원수:', a1.ndim, a2.ndim)
 ```
 
     차원수: 1 2
-    
+
 
 
 ```python
@@ -213,7 +216,7 @@ print(a1_1.dtype, a1.dtype)
 ```
 
     int64 int32
-    
+
 
 
 ```python
@@ -239,7 +242,7 @@ print(a4.dtype)
 ```
 
     int8
-    
+
 
 
 ```python
@@ -293,7 +296,7 @@ for i in a1:
     20
     100
     2
-    
+
 
 
 ```python
@@ -326,7 +329,7 @@ print(a5)
     1
     10
     [0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]
-    
+
 
 #### 튜플: 다차원배열
 
@@ -358,7 +361,7 @@ print(a6)
       [0 0 0 0 0]
       [0 0 0 0 0]
       [0 0 0 0 0]]]
-    
+
 
 
 ```python
@@ -389,7 +392,7 @@ print(a7)
     1
     5
     [1. 1. 1. 1. 1.]
-    
+
 
 #### 다차원
 
@@ -412,7 +415,7 @@ print(a8)
      [1 1]
      [1 1]
      [1 1]]
-    
+
 
 
 ```python
@@ -448,7 +451,7 @@ print(a9)
      [10 10]
      [10 10]
      [10 10]]
-    
+
 
 
 ```python
@@ -481,7 +484,7 @@ v1
 ```
 
     (3, 2)
-    
+
 
 
 
@@ -502,7 +505,7 @@ v2
 ```
 
     (3, 2)
-    
+
 
 
 
@@ -523,7 +526,7 @@ v3
 ```
 
     (3, 2)
-    
+
 
 
 
@@ -558,7 +561,7 @@ print(a10)
 ```
 
     [ 1 11 21 31 41 51 61 71 81 91]
-    
+
 
 #### 실수 - 시작: 0, 끝: 1, 증감: 0.1
 
@@ -569,7 +572,7 @@ print(a11)
 ```
 
     [0.  0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9]
-    
+
 
 #### 양수 - 시작: 10, 끝: -10, 증감: -2
 
@@ -580,7 +583,7 @@ print(a12)
 ```
 
     [10  8  6  4  2  0 -2 -4 -6 -8]
-    
+
 
 #### 시작: 1, 끝: 10, 증감: 생략
 
@@ -591,7 +594,7 @@ print(a13)
 ```
 
     [1 2 3 4 5 6 7 8 9]
-    
+
 
 #### 시작: 생략, 끝: 10, 증감: 생략
 
@@ -602,7 +605,7 @@ print(a14)
 ```
 
     [0 1 2 3 4 5 6 7 8 9]
-    
+
 
 
 ```python
@@ -632,7 +635,7 @@ v10
 ```
 
     (50,)
-    
+
 
 
 
@@ -663,7 +666,7 @@ v11
 ```
 
     (20,)
-    
+
 
 
 
@@ -686,7 +689,7 @@ v12
 ```
 
     (20,)
-    
+
 
 
 
@@ -714,7 +717,7 @@ v13
       52.20689655  55.62068966  59.03448276  62.44827586  65.86206897
       69.27586207  72.68965517  76.10344828  79.51724138  82.93103448
       86.34482759  89.75862069  93.17241379  96.5862069  100.        ]
-    
+
 
 
 
@@ -747,7 +750,7 @@ print(X.shape, Y.shape)
 ```
 
     (1000,) (1000,)
-    
+
 
 
 ```python
@@ -757,9 +760,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_87_0.png)
-    
+​    
 
 
 
@@ -846,7 +849,7 @@ a2
 ```
 
     (5, 6, 2)
-    
+
 
 
 
@@ -902,9 +905,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_104_0.png)
-    
+​    
 
 
 
@@ -949,7 +952,7 @@ weights
 ```
 
     (1000,)
-    
+
 
 
 
@@ -1202,9 +1205,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_114_0.png)
-    
+​    
 
 
 
@@ -1217,9 +1220,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_115_0.png)
-    
+​    
 
 
 
@@ -1271,7 +1274,7 @@ b
 ```
 
     (10,)
-    
+
 
 
 
@@ -1288,7 +1291,7 @@ b2
 ```
 
     (4, 2, 3)
-    
+
 
 
 
@@ -1386,7 +1389,7 @@ s4
 ```
 
     (5, 3)
-    
+
 
 
 
@@ -1409,7 +1412,7 @@ s5
 ```
 
     (10,)
-    
+
 
 
 
