--- a/_posts/05.Numpy/02.Numpy 원소,배열,연산/2023-10-13-00.Numpy 원소,배열,연산.md
+++ b/_posts/05.Numpy/02.Numpy 원소,배열,연산/2023-10-13-00.Numpy 원소,배열,연산.md
@@ -2,6 +2,9 @@
 layout: single
 title: '변수와 연산자'
 typora-root-url: ../
+categories: Numpy.02.
+tag: Numpy
+toc: true
 ---
 
 # 인덱싱과 슬라이싱을 이용한 배열의 원소 조회 및 변경
@@ -67,7 +70,7 @@ print(a[[1, 5, -1, -3]])
     0
     29
     [ 1  5 29 27]
-    
+
 
 #### 변경
 
@@ -448,7 +451,7 @@ print(a>0)
 
     [20 15  0 12 17]
     [ True  True False  True  True]
-    
+
 
 #### 비교연산자
 - 피연산자 () 묶어야한다
@@ -623,7 +626,7 @@ for a1, a2 in zip(a[0], a[1]):
     74
     50
     65
-    
+
 
 #### True: 양수, False: 양수
 
@@ -750,7 +753,7 @@ x
 ```
 
     (20,)
-    
+
 
 
 
@@ -770,7 +773,7 @@ r1
 ```
 
     (4, 5)
-    
+
 
 
 
@@ -791,7 +794,7 @@ r2
 ```
 
     (4, 5)
-    
+
 
 
 
@@ -901,12 +904,12 @@ x.reshape(2, 8)
 
 
     ---------------------------------------------------------------------------
-
+    
     ValueError                                Traceback (most recent call last)
-
+    
     Cell In[26], line 1
     ----> 1 x.reshape(2, 8)
-    
+
 
     ValueError: cannot reshape array of size 20 into shape (2,8)
 
@@ -1395,13 +1398,13 @@ x - z
 
 
     ---------------------------------------------------------------------------
-
+    
     ValueError                                Traceback (most recent call last)
-
+    
     Cell In[78], line 2
           1 # shape이 다르면 계산안됨
     ----> 2 x - z
-    
+
 
     ValueError: operands could not be broadcast together with shapes (2,5) (2,4) 
 
@@ -1463,7 +1466,7 @@ print(r1, r2)
 ```
 
     32 32
-    
+
 
 ### 행렬 곱
 - 같은 index의 앞 행렬의 행과 뒤 행렬의 열간에 내적을 한다.
@@ -1473,7 +1476,7 @@ print(r1, r2)
     - (3 x 2)와 (2 x 5) = (3 x 5)
     - (1 x 5)와 (5 x 1) = (1 x 1)    
 
-   
+
 $$
 \begin{align}
 A = \begin{bmatrix} 1 & 2 & 3 \\ 4 & 5 & 6 \end{bmatrix}
@@ -1491,7 +1494,7 @@ $$
 A\cdot B = \begin{bmatrix} 1\times 1 + 2\times 3 + 3 \times 5 & 1\times 2 + 2\times 4 + 3 \times 6  \\ 4\times 1 + 5\times 3 + 6 \times 5  & 4\times 2 + 5\times 4 + 6 \times 6  \end{bmatrix} = 
 \begin{bmatrix} 22 & 28 \\ 49 & 64 \end{bmatrix}
 \end{align}
-$$    
+$$
 
 #### 행렬곱 : ( n , m ) ( m , o ) => n*o
 
@@ -1543,14 +1546,14 @@ A @ C
 
 
     ---------------------------------------------------------------------------
-
+    
     ValueError                                Traceback (most recent call last)
-
+    
     Cell In[88], line 3
           1 C = np.arange(1, 7).reshape(2, 3)
           2 A.shape, C.shape
     ----> 3 A @ C
-    
+
 
     ValueError: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 2 is different from 3)
 
@@ -1682,11 +1685,11 @@ np.dot(cnts, price_2)
         - x.sum()
     - 공통 매개변수
         - axis=None: 다차원 배열일 때 통계값을 계산할 axis(축)을 지정한다. None(기본값)은 flatten후 계산한다.
-        
+    
 - 배열의 원소 중 누락된 값(NaN - Not a Number) 있을 경우 연산의 결과는 NaN으로 나온다.        
 - **안전모드 함수**
     - 배열내 누락된 값(NaN)을 무시하고 계산
-        
+    
 - https://docs.scipy.org/doc/numpy-1.15.1/reference/routines.statistics.html
 
 ![image.png](b938bbb3-4460-4b70-b046-f27353384c8d.png)
@@ -1910,7 +1913,7 @@ r
 ```
 
     (1, 5)
-    
+
 
 
 
@@ -1927,7 +1930,7 @@ r
 ```
 
     (4, 1)
-    
+
 
 
 
@@ -2039,7 +2042,7 @@ print(x.shape, y.shape)
 ```
 
     (3,) (3, 3)
-    
+
 
 
 ```python
@@ -2063,7 +2066,7 @@ print(a.shape, b.shape)
 ```
 
     (3, 1) (3,)
-    
+
 
 
 ```python
@@ -2104,14 +2107,14 @@ m + n
 
 
     ---------------------------------------------------------------------------
-
+    
     ValueError                                Traceback (most recent call last)
-
+    
     Cell In[151], line 4
           2 m = np.arange(4).reshape(2, 2)
           3 n = np.arange(6).reshape(2, 3)
     ----> 4 m + n
-    
+
 
     ValueError: operands could not be broadcast together with shapes (2,2) (2,3) 
 
