--- a/_posts/01.Python/04.함수/2023-10-04-01.함수.md
+++ b/_posts/01.Python/04.함수/2023-10-04-01.함수.md
@@ -106,25 +106,22 @@ print(a == None)
 
 
 
-## return value(반환값)
+## Return value
+
 ### return value(반환값)
->>>>>>> 77206d0f9bd7e7bff1b7a39e2f32145ee681df98
 - 함수가 호출받아 처리한 결과값으로 호출한 곳으로 반환하는 값이다.
 - 함수 구현부에 return \[값\] 구문을 사용해 반환한다.
     - **return**
         - 함수가 **정상적**으로 끝났고 호출한곳으로 돌아간다.
-        <<<<<<< HEAD
     - return 반환값
         - 호출한 곳으로 값을 가지고 돌아간다. (반환한다)
         - 반환값이 없을 경우 None을 반환한다.
         - 함수에 return 구문이 없을 경우 마지막에 return None이 실행
-        =======
         - 보통은 함수 구현의 마지막에 넣지만 경우에 따라 중간에 올 수 있다.
     - return 반환값
         - 호출한 곳으로 값을 가지고 돌아간다. (반환한다)
         - 반환값이 없을 경우 None을 반환한다.
         - 함수에 return 구문이 없을 경우 마지막에 return None이 실행된다.
->>>>>>> 77206d0f9bd7e7bff1b7a39e2f32145ee681df98
 - 여러개의 값을 return 하는 경우 **자료구조로 묶어서** 전달해야한다.
     - 함수는 한개의 값만 반환할 수 있다. 
 
@@ -146,10 +143,7 @@ print(ret_value)
     홍길동님 안녕하세요.
     방갑습니다.
 
-<<<<<<< HEAD
 
-=======
->>>>>>> 77206d0f9bd7e7bff1b7a39e2f32145ee681df98
 
 ```python
 # 사칙연산 처리
@@ -204,1210 +198,3 @@ print(divide(10,0))
 
     0으로는 어떤 숫자도 나눌 수없습니다. 두번째 파라미터는 0 이외의 값을 주세요.
     None
-
-## Parameter (매개변수)
-
-### 기본값이 있는 Parameter
-- 매개변수에 값을 대입하는 구문을 작성하면 호출할 때 argument 가 넘어오지 않으면 대입해놓은 기본값을 사용한다.
-- 함수 정의시 기본값 없는 매개변수, 있는 매개변수를 같이 선언할 수 있다.
-    - **이때 기본값 없는 매개변수들을 선언하고 그 다음에 기본값 있는 매개변수들을 선언한다.** 
-
-
-```python
-def print_info(name): # name 파라미터는 반드시 Argument를 받아야한다
-    print(f'이름:{name}')
-```
-
-
-```python
-print_info('홍길동')
-# print_info()  TypeError : 함수이름() missing 개수 required positional argument: '파라미터변수이름'
-```
-
-    이름:홍길동
-
-
-
-```python
-def print_info2(name=None):# 기본값이 있는 파라미터
-    if name:  # name is not None
-        print(f'이름:{name}')
-    else:
-        print(f'이름을 입력하세요.')
-```
-
-
-```python
-print_info2() # name 에 값을 전달안함. -> name=None
-print_info2('홍길동') # name <= 홍길동
-```
-
-    이름을 입력하세요.
-    이름:홍길동
-
-
-
-```python
-# 기본값이 없는 Parameter들을 먼저 선언.
-# id, password, name 은 필수 age, weight, tall은 필수는아님
-
-def print_info3(id, password, name, age=0, weight=0, tall=0): 
-    print(id, password, name, age, weight, tall)
-    
-```
-
-
-```python
-print_info3('id','password','name')
-```
-
-    id password name 0 0 0
-
-
-
-```python
-print_info3('id','password','name',30,40,50)
-```
-
-    id password name 30 40 50
-
-
-
-```python
-# default 값이 없는 파라미터 뒤에 default 값이 있는 파라미터 오면 안됨
-
-def print_info3(id, password, name, email, age=0, weight=0, tall=0): 
-    print(id, password, name, age, weight, tall)
-```
-
-
-```python
-print('id','pass','name','age','weight','tall')
-```
-
-    id pass name age weight tall
-
-
-
-```python
-# defoult 값이 없는 파라미터들, * , default 값이 있는 파리미터들
-# Parameter에 *는 구분자로 사용.
-
-def print_info4(id, password, name, *, age=0, weight=0, tall=0): 
-    print(id, password, name, age, weight, tall)
-```
-
-
-```python
-print_info4(1,2,3)
-```
-
-    1 2 3 0 0 0
-
-
-
-```python
-print_info4(1,2,3,age=10,weight=30,tall=40) # * 뒤에 파라미터는 이름=값 형태로 전달
-```
-
-    1 2 3 10 30 40
-
-
-### Positional argument와 Keyword argument 
-- Argument는 함수/메소드를 호출할 때 전달하는 입력값을 말한다.
-    - Argument는 전달하는 값이고 Parameter는 그 값을 저장하는 변수
-- Positional argument
-    -  함수 호출 할때 argument(전달인자)를 Parameter  순서에 맞춰 값을 넣어서 호출.
-- keyword  argument 
-    - 함수 호출할 때 argument를 `Parameter변수명 = 전달할값` 형식으로 선언해서 어떤 parameter에 어떤 값을 전달할 것인지 지정해서 호출.
-    - 순서와 상관없이 호출하는 것이 가능.
-    - parameter가 많고 대부분 기본값이 있는 함수 호출 할 때 뒤 쪽에 선언된 parameter에만 값을 전달하고 싶을 경우 유용하다.
-
-
-```python
-# 모든 파라미터들을 기본값이 있는 것으로 선언
-
-def print_info5(id=None, password=None, name=None, age=0, weight=0, tall=0, email=None): 
-    print(id, password, name, age, weight, tall, email, sep=',')
-```
-
-
-```python
-print_info5()
-```
-
-    None,None,None,0,0,0,None
-
-
-
-```python
-print_info5('My_ID') # id 설정
-```
-
-    My_ID,None,None,0,0,0,None
-
-
-
-```python
-print_info5('My_ID','abcde') # id, password ( 첫번째, 두번째 파라미터 )
-```
-
-    My_ID,abcde,None,0,0,0,None
-
-
-
-```python
-print_info5('None','None','None',0,0,0,'abc@abc.com') 
-```
-
-    None,None,None,0,0,0,abc@abc.com
-
-
-
-```python
-# email만 설정 ( 둿쪽에 선언된 파라미터에 값을전달, 앞에 선언된 파라미터는 기본값을 사용)
-print_info5(email='aaaaaaaaaaa@abc.com') # Keyword Argument
-```
-
-    None,None,None,0,0,0,aaaaaaaaaaa@abc.com
-
-
-
-```python
-print_info5(email='aaaaaaaaaaa@abc.com', password='abcdef', tall=175) # 순서 상관없다.
-```
-
-    None,abcdef,None,0,0,175,aaaaaaaaaaa@abc.com
-
-
-
-```python
-# positional args, ketword args 를 같이 사용 가능 -> positional를 먼저 설정 keyword 를 다음에 설정
-print_info5('My_ID','1111111111pwd',email='abc@abc.com')
-```
-
-    My_ID,1111111111pwd,None,0,0,0,abc@abc.com
-
-
-### 가변인자 (Var args) 파라미터
-- 호출하는 쪽에서 argument로 0 ~ n개의 값을 나열해서 여러개의 값들을 전달하면 **tuple이나 dictionary로 묶어서** 받을 수있도록 선언하는 parameter
-    - positial argument로 전달하는 것과 keyword argument로 전달되는 값을 받는 두가지 방식이 있다.
-- \*변수명: **positional argument**를 개수와 상관없이 하나의 변수로 받을 수 있도록 선언하는 가변인자.
-    - 전달된 값들은 tuple로 받아서 처리한다.
-    - 관례적으로 변수명은 \*args 를 사용한다.
-- \*\*변수명: **keyword argument**를 개수와 상관없이 하나의 변수로 받을 수 있도록 선언하는 가변인자.
-    - 전달된 값들은 dictionary로 받아서 처리한다.
-    - 관례적으로 변수명은 \*\*kwargs 를 사용한다.
-- 하나의 함수에 가변인자는 \* 하나, \*\* 두개짜리 각각 한개씩만 선언할 수 있다.
-- 파라미터 선언순서
-    1. 기본값이 없는 파라미터
-    2. 기본값이 있는 파라미터
-    3. `*args`
-    4. `**kwargs`
-
-
-```python
-# 숫자 값들을 받아서 함계를 반환하는 함수
-
-def sunmation(nums):
-    result = 0 # 총합을 정할 변수 
-    for v in nums:
-        result += v # result -= result + v
-    return result
-```
-
-
-```python
-print(sunmation([1,2]))
-```
-
-    3
-
-
-
-```python
-print(sunmation([1,2,3,4,5]))
-```
-
-    15
-
-
-
-```python
-# 변수명 : 가변인자 -> positional argument로 전달되는 인자값의 개수를 상관없이 받겠다. ( 0 개이상 )
-    # 튜플 Tuple로 받음
-
-def sunmation2(*nums): 
-    result = 0 # 총합을 정할 변수 
-    for v in nums:
-        result += v # result = result + v
-    return result
-```
-
-
-```python
-print(sunmation2()) # argument = 0
-```
-
-    0
-
-
-
-```python
-print(sunmation2(1,2,3,4,5,6,7,8,9)) # argument = 9
-```
-
-    45
-
-
-
-```python
-# keyword argument 개수 상관없이 전달 받겠다. ( 호출하는 부분이 편함 )
-    # 딕셔너리 dict 받음
-    
-def print_info(**user_info):
-    print(type(user_info))
-    print(user_info['name'], user_info['age'])
-```
-
-
-```python
-print_info(name='홍길동',age=20)    
-```
-
-    <class 'dict'>
-    홍길동 20
-
-
-
-```python
-# 가변인자 : 같이 선언 * 먼저 선언하고 다음에 ** 선언. 각각 한개씩만 선언 가능.
-# * args( 튜플 ) ,    ** kwargs ( keyword 인자)
-def test(*args, **kwargs):
-    print(args)
-    print(kwargs)
-```
-
-
-```python
-test(1,2,3,4,5,6, a=10, b=20, c='abc')
-# test(*l, **dic) => test( 1, 2, 3, 4, 5, aaa=10,bbb=20,ccc=30 )
-```
-
-    (1, 2, 3, 4, 5, 6)
-    {'a': 10, 'b': 20, 'c': 'abc'}
-
-
-
-```python
-# 일반 파라미터, *가변인자, **가변인자
-def test2(p1, p2, p3, *args, **kwargs):
-    print(p1,p2,p3)
-    print(args)
-    print(kwargs)
-```
-
-
-```python
-test2(10,20,30,1,2,3,4,5,a='가',b='나')
-```
-
-    10 20 30
-    (1, 2, 3, 4, 5)
-    {'a': '가', 'b': '나'}
-
-
-
-```python
-def fn(*args):
-    print(args)
-    print(len(args))
-```
-
-
-```python
-l = [ 1, 2, 3, 4, 5 ]
-# fn() 가변인자에 리스트 l의 원소들을 전달
-```
-
-
-```python
-# print(fn(l)) # list가 한개의 값으로 전달, (리스트)
-print(fn(*l)) # 가변인자에 * 리스트 => 리스트의 원소들을 풀어서 전달
-```
-
-    (1, 2, 3, 4, 5)
-    5
-    None
-
-
-
-```python
-# fn( 1, 2, 3, 4, 5 )
-print('-'*50)
-```
-
-    --------------------------------------------------
-
-
-
-```python
-def fn2(**kwargs):
-    print(kwargs)
-    print(len(kwargs))
-```
-
-
-```python
-dic = {'aaa':10,'bbb':20,'ccc':30}
-```
-
-
-```python
-fn2(**dic) # dict의 item 들을 key=value, key=value 형태로 풀어서 전달.
-# fn2(aaa=10,bbb=20,ccc=30)
-```
-
-    {'aaa': 10, 'bbb': 20, 'ccc': 30}
-    3
-
-
-# 변수의 유효범위(Scope)
-
-- **지역변수 (local variable)**
-    - 함수안에 선언된 변수
-    - 선언된 그 함수 안에서만 사용할 수 있다.
-- **전역변수 (global variable)**
-    - 함수 밖에 선언 된 변수
-    - 모든 함수들이 공통적으로 사용할 수 있다.
-    - 하나의 함수에서 값을 변경하면 그 변한 값이 모든 함수에 영향을 주기 때문에 함부로 변경하지 않는다.
-    - 함수내에서 전역변수에 값을 대입하기 위해서는 global 키워드를 이용해 사용할 것을 미리 선언해야 한다.
-        - global로 선언하지 않고 함수안에서 전역변수와 이름이 같은 변수에 값을 대입하면 그 변수와 동일한 지역변수을 생성한다.
-        - 조회할 경우에는 상관없다.
-            - 함수에서 변수를 조회할 경우 **먼저 지역변수를 찾고 없으면 전역변수를 찾는다.**
-            
-
-
-
-```python
-# 전역 변수(global variable)
-
-name = '홍길동'
-# 지역변수 : 함수가 실행되는 동안에만 메모리( stack 메모리 영역 )에 올라간다.
-def fn1():
-    print(name)
-    age = 20 # fn1 함수 안에 정의한 변수: ( fn1함수의 ) 지역변수 ( Local variable )
-    print(age)
-```
-
-
-```python
-def fn2():
-    name = '이순신' # fn2()함수의 지역변수를 정의 
-    print(name)
-    age = 30 # fn2 함수 안에 정의한 변수: ( fn2함수의 ) 지역변수 ( Local variable )
-    print(age)
-```
-
-
-```python
-def fn3():
-    global name # global변수 name 를 사용하겠다고 선언. 
-                #( global 변수의 값을 변경할 경우 반드지 지정. 
-                #                      지정하지 않고 변경하면 Local 변수 정의하는것이 된다. )
-    name = '유재석'
-    print(name)
-```
-
-
-```python
-fn1()
-```
-
-    홍길동
-    20
-
-
-
-```python
-fn2()
-```
-
-    이순신
-    30
-
-
-
-```python
-fn3()
-```
-
-    유재석
-
-
-# 함수는 일급시민(First class citizen) 이다. 
-- 일급 시민
-    1. 변수에 대입 할 수 있다.
-    1. Argument로 사용할 수 있다.
-    1. 함수나 메소드의 반환값으로 사용 할 수 있다.
-- 일급
-    - 모든 권리를 다 가진다는 의미
-- 시민
-    - 프로그래밍 언어를 구성하는 객체를 의미
-- 즉 파이썬에서 함수는 일반 값(객체) 로 취급된다. 
-
-
-```python
-# 정수
-a = 10 # 1, 변수에 대입
-
-def func(num):
-    print(num)
-    return 10 # 3. return 값으로 사용
-```
-
-
-```python
-v = func(10) # 2. argument 사용
-# 정수는 일급시민객체
-```
-
-    10
-
-
-
-```python
-def test_fn():
-    print('a')
-b = test_fn # 1. 함수를 변수에 대입
-```
-
-
-```python
-def func2(fn): 
-    print('abc',fn)
-    return test_fn # 3. 함수를 return 값으로 사용
-v = func2(test_fn) # 2, 함수를 argument 사용.
-```
-
-    abc <function test_fn at 0x000002C6B513C720>
-
-
-
-```python
-v
-```
-
-
-
-
-    <function __main__.test_fn()>
-
-
-
-
-```python
-def hello():
-    print('hello world')
-v = hello() # hello 함수를 호출해서 실행시킴. 그 반환값을 v에 대입
-```
-
-    hello world
-
-
-
-```python
-print(v)
-```
-
-    None
-
-
-
-```python
-my_hello = hello # hello 함수를 my_hello란 변수에 할당
-my_hello # hello 함수를 자체를 할당
-my_hello()
-```
-
-    hello world
-
-
-
-```python
-your_hello = hello
-your_hello()
-```
-
-    hello world
-
-
-
-```python
-test_hello = hello
-test_hello()
-```
-
-    hello world
-
-
-
-```python
-# 함수를 argument로 전달
-
-def calc(func):
-    # 처리할 값을 calc함수가 가지고 있다. => 어떤 처리를 하지?
-    # 파라미터로 처리하는 함수를 호출하는 곳에서 받겠다.
-    num1 = 10
-    num2 = 20
-    result = func( num1, num2 ) # parameter로 받은 함수를 호출
-    print(result)
-    # 계산
-```
-
-
-```python
-def plus( num1, num2 ):
-    # 어떻게 처리할지는 plus함수가 가지고있다. => 무슨값을 처리할지?
-    # 파라미터로 호출하는 곳에서 처리할 값(피연산자)를 받겠다.
-    result = num1 + num2
-    return result
-```
-
-
-```python
-def minus(n1,n2):
-    return n1 - n2
-```
-
-
-```python
-calc(minus) # func( num1, num2 ) == minus( num1, num2 )
-```
-
-    -10
-
-
-
-```python
-# calc 호출
-calc(plus) # func( num1, num2 ) == plus( num1, num2 )
-```
-
-    30
-
-
-
-```python
-# plus 호출
-v = plus( 10 ,20 )
-print(v)    
-```
-
-    30
-
-
-
-```python
-l = [ 1, 4, 3, 2, 3, 5, 6, 10, 7, 2, 2, 3, 4, 5 ]
-# 값을 하나 받아서 조건을 체크한 결과를 bool 값으로 반환.
-def check_fn(element):
-    return element % 2 == 0
-```
-
-
-```python
-list( filter( check_fn, l ) )
-#filter() 내장함수
-### filter( 함수, iterable ) - iterable의 원소들 중에서 특정 조건이 True인 값들을 제공한다.
-#### 함수 : 조건을 check하는 함수.
-```
-
-
-
-
-    [4, 2, 6, 10, 2, 2, 4]
-
-
-
-
-```python
-def my_filter(func, lst):
-    result = []
-    for i in lst:
-        if func(i):
-            result.append(i)
-    return result
-```
-
-
-```python
-my_filter(check_fn, l)
-```
-
-
-
-
-    [4, 2, 6, 10, 2, 2, 4]
-
-
-
-## 람다식/람다표현식 (Lambda Expression)
-- 함수를 하나의 식을 이용해서 정의할때 사용하는 표현식(구문).
-- 값을 입력받아서 **간단한 처리한 결과**를 반환하는 간단한 함수를 표현식으로 정의할 수 있다.
-    - 처리결과를 return 하는 구문을 하나의 명령문으로 처리할 수 있을때 람다식을 사용할 수 있다.
-    - return x + y
-- 구문
-```python
-lambda 매개변수[, 매개변수, ...] : 명령문(구문)
-```
-- 명령문(구문)은 하나의 실행문만 가능하다.
-- 명령문(구문)이 처리한 결과를 리턴해준다.
-- **람다식은 함수의 매개변수로 함수를 전달하는 일회성 함수를 만들때 주로 사용한다.**
-
-
-```python
-# Lambda 식은 하나의 명령문만 가능하다 파라미터는 몇개든 상관없다.
-f1 = lambda x, y : x + y
-def f2( x, y ):
-    return x + y
-# f1 = f2 같은 일을 함
-```
-
-
-```python
-print(f1(10,20))
-```
-
-    30
-
-
-
-```python
-print(f2(10,20))
-```
-
-    30
-
-
-
-```python
-f3 = lambda name: name.endswith('.exe')
-```
-
-
-```python
-print(f3('test.exe'), f3('test.jpg'))
-```
-
-    True False
-
-
-
-```python
-f4 = lambda x, y: x**y
-```
-
-
-```python
-print(f4(10,2))
-```
-
-    100
-
-
-
-```python
-print(list(filter( lambda x: x%2==0, [10,2,3,5,7,28,3,8,9,2,7,8,9,34])))
-```
-
-    [10, 2, 28, 8, 2, 8, 34]
-
-
-### iterable 관련 함수에서 함수를 매개변수로 받아 처리하는 함수들
-- sorted(iterable, reverse=False, key=None)
-    - 정렬처리
-    - 매개변수
-        - reverse: True - 내림차순, False - 오름차순(기본)
-        - key: 함수 
-            - Parameter로 iterable의 각 원소를 받는 함수.
-            - 정렬을 할 때 iterable의 원소기준으로 정렬하는 것이 아니라 이 함수가 반환하는 값을 기준으로 정렬
-- filter(함수, Iterable)
-    - Iterable의 원소들 중에서 특정 조건을 만족하는 원소들만 걸러주는 함수
-    - 함수
-        - 어떻게 걸러낼 것인지 조건을 정의. 매개변수 1개, 반환값 bool
-        - 원소 하나 하나를 함수에 전달해 True를 반환하는 것만 반환
-- map(함수, Iterable)
-    - Iterable의 원소들 하나 하나를 처리(변형)해서 그 결과를 반환
-    - 함수
-        - 원소들을 어떻게 처리할지 정의. 매개변수 1개. 반환값: 처리 결과
-- **filter/map 반환타입**: generator 형태로 반환 된다. (리스트가 아님)
-
-
-```python
-l = ['a','aa','aaa','aaaa','aaaaa','aaaaaa','b']
-```
-
-
-```python
-sorted(l) #오른차순
-```
-
-
-
-
-    ['a', 'aa', 'aaa', 'aaaa', 'aaaaa', 'aaaaaa', 'b']
-
-
-
-
-```python
-sorted(l, reverse=True)  #내림차순
-```
-
-
-
-
-    ['b', 'aaaaaa', 'aaaaa', 'aaaa', 'aaa', 'aa', 'a']
-
-
-
-
-```python
-# 글자수 순서대로 정령
-### 각 원소를 key 함수에 넣어서 반환되는 값들 기준으로 정렬
-```
-
-
-```python
-sorted(l, key=lambda x:len(x)) # 오른차순
-```
-
-
-
-
-    ['a', 'b', 'aa', 'aaa', 'aaaa', 'aaaaa', 'aaaaaa']
-
-
-
-
-```python
-sorted(l, key=lambda x:len(x), reverse=True) # 내림차순
-```
-
-
-
-
-    ['aaaaaa', 'aaaaa', 'aaaa', 'aaa', 'aa', 'a', 'b']
-
-
-
-
-```python
-sorted(l, key=len) # 오른차순
-```
-
-
-
-
-    ['a', 'b', 'aa', 'aaa', 'aaaa', 'aaaaa', 'aaaaaa']
-
-
-
-
-```python
-# filter () : 특정 조건이 True 원소들만 조회
-# 3글자 이상인 문자열만 조회
-print(l)
-```
-
-    ['a', 'aa', 'aaa', 'aaaa', 'aaaaa', 'aaaaaa', 'b']
-
-
-
-```python
-print(list(filter( lambda x: len(x) >= 3 , l)))
-```
-
-    ['aaa', 'aaaa', 'aaaaa', 'aaaaaa']
-
-
-
-```python
-# map() : iterable의 원소들을 일괄처리
-# 글자수를 반환
-```
-
-
-```python
-print(l)
-```
-
-    ['a', 'aa', 'aaa', 'aaaa', 'aaaaa', 'aaaaaa', 'b']
-
-
-
-```python
-print(list(map(lambda x:len(x), l)))
-```
-
-    [1, 2, 3, 4, 5, 6, 1]
-
-
-# docstring
-- 함수에 대한 설명
-- 함수의 구현부의 첫번째에 여러줄 문자열로 작성한다.
-- 함수 매개변수/리턴타입에 대한 힌트(주석)
-
-
-```python
-# 함수 / 변수 / 클래스 설명
-# 내장함수
-help(sorted)
-```
-
-    Help on built-in function sorted in module builtins:
-    
-    sorted(iterable, /, *, key=None, reverse=False)
-        Return a new list containing all items from the iterable in ascending order.
-        
-        A custom key function can be supplied to customize the sort order, and the
-        reverse flag can be set to request the result in descending order.
-
-
-​    
-
-
-```python
-sorted # shift + tab
-```
-
-
-
-
-    <function sorted(iterable, /, *, key=None, reverse=False)>
-
-
-
-
-```python
-# 힌트 - 변수(파라미터) - 변수명 : 타입, 변수명 :'설명'
-#        - 함수의 리턴값에 대한 힌트 def 이름 () -> 리턴힌트:
-def greet(name : str, age : int):
-    return 10
-    """
-    이 함수에 대한 설명
-    이름과 나이를 하나의 문자열로 만들어서 반환하는 함수.
-    
-    Parameter
-        이름 : 타입 - 설명
-        name : str - 고객 이름
-        age : int - 고객 나이
-        
-    Return
-        타입 - 설명
-        str : 고객 정보를 하나의 문자열로 반환.
-        
-    Raise
-        이 함수가 실행하는 도중 발생할 수 있는 Exception(에러)에 대한 설명
-        Exception 타입 - 설명
-        TypeError - name, age를 입력받지 못하면 발생.
-        
-    예제
-    > v = greet('홍길동',20)
-    >print(v)
-    out: 이름: 홍길동, 나이:20
-    """
-    
-    return f'이름: {name}, 나이: {age}'
-```
-
-
-```python
-help(greet)
-```
-
-    Help on function greet in module __main__:
-    
-    greet(name: str, age: int)
-        # 힌트 - 변수(파라미터) - 변수명 : 타입, 변수명 :'설명'
-        #        - 함수의 리턴값에 대한 힌트 def 이름 () -> 리턴힌트:
-
-
-​    
-
-### pass 키워드(예약어)
-- 빈 구현부를 만들때 사용
-    - 코드블럭을 하는 일 없이 채울 때 사용
-    - `...` (Ellipsis:생략부호)을 대신 사용할 수 있다.
-
-
-```python
-def f1():
-    pass # 나중에 만들겠다
-def f2():
-    pass 
-def f10():
-    ... # 구현은 생략
-for i in range(10):
-    pass # 구현부는 나중에 구현하겠다.
-if True:
-    pass
-```
-
-# 연습문제
-
-
-```python
-# 1. 사용자가 입력한 단의 구구단을 출력하는 함수를 구현(매개변수로 단을 받는다.)
-def dan(num:int):
-    for i in range(1,10):
-        print( f' {num} * {i} = {num * i} ')
-```
-
-
-```python
-dan( 3)    
-```
-
-     3 * 1 = 3 
-     3 * 2 = 6 
-     3 * 3 = 9 
-     3 * 4 = 12 
-     3 * 5 = 15 
-     3 * 6 = 18 
-     3 * 7 = 21 
-     3 * 8 = 24 
-     3 * 9 = 27 
-
-
-
-```python
-dan1 = int(input('단:'))
-dan(dan1) # dan1 에 dan 안에 있는 함수를 넣는다
-```
-
-    단:4
-     4 * 1 = 4 
-     4 * 2 = 8 
-     4 * 3 = 12 
-     4 * 4 = 16 
-     4 * 5 = 20 
-     4 * 6 = 24 
-     4 * 7 = 28 
-     4 * 8 = 32 
-     4 * 9 = 36 
-
-
-
-```python
-# 2. 시작 정수, 끝 정수를 받아 그 사이의 모든 정수의 합을 구해서 반환하는 함수를 구현
-#                                                                     (ex: 1, 20 => 1에서 20 사이의 모든 정수의 합계)
-def aclate(start:int, stop:int) -> int:
-    result = 0
-    for v in range(start,stop+1):
-        result += v
-    return result
-```
-
-
-```python
-print(aclate(1,10))
-```
-
-    55
-
-
-
-```python
-sum(list(range(1,5))) # 내장함수 => sum 누적 합계 수
-```
-
-
-
-
-    10
-
-
-
-
-```python
-# 3. 1번 문제에서 시작을 받지 않은 경우 0을, 끝 정수를 받지 않으면 10이 들어가도록 구현을 변경
-def aclate2(start:int=0,stop:int=10, include_stop:bool=True) -> int:
-    if include_stop:
-        stop += 1
-    return sum(range(start, stop))
-```
-
-
-```python
-aclate2(5) # stop, include_stop 생략
-```
-
-
-
-
-    45
-
-
-
-
-```python
-aclate2() # start , stop, include_stop 생략
-```
-
-
-
-
-    55
-
-
-
-
-```python
-aclate(2,stop=5)
-```
-
-
-
-
-    14
-
-
-
-
-```python
-aclate2(include_stop=False)
-```
-
-
-
-
-    45
-
-
-
-
-```python
-def aclate3(**kwargs):
-    # 가변인자를 사용할 경우 docstring에 설명을 잘 달아줘야 한다.
-    start = kwargs['start']
-    stop = kwargs['stop']
-    return sum(range(start,stop))
-```
-
-
-```python
-aclate3(start=10, stop=50)
-```
-
-
-
-
-    1180
-
-
-
-
-```python
-# 4. 체질량 지수는 비만도를 나타내는 지수로 키가 a미터 이고 몸무게가 b kg일때 b/(a**2) 로 구한다.
-# 체질량 지수가
-#- 18.5 미만이면 저체중
-#- 18.5이상 25미만이면 정상 
-#- 25이상이면 과체중
-#- 30이상이면 비만으로 하는데
-#몸무게와 키를 매개변수로 받아 비만인지 과체중인지 반환하는 함수를 구현하시오.
-
-def check_bmi(tall:'미터단위', weight:float):
-    bmi = weight / (tall**2)
-    result = None # 결과담을 변수
-    if bmi < 18.5:
-        result = '저체중'
-    elif bmi < 25:
-        result = '정상'
-    elif bmi < 30:
-        result = '과체중'
-    else:
-        result = '비만'
-    return round(bmi, 2), result    # bmi, resultl
-             # round( 2 ) 소수점 2자리까지
-```
-
-
-```python
-print(check_bmi(1.75,80))
-```
-
-    (26.12, '과체중')
-
-
-
-```python
-print(check_bmi(1.6,45))
-```
-
-    (17.58, '저체중')
-
-
-
-```python
-# 람다식
-#5. filter()를 이용해 다음 리스트에서 양수만 추출히 리스트를 구현
-ex1 = [1, -10, -2, 20, 3, -5, -7, 21]
-```
-
-
-```python
-print([ x for x in ex1 if x > 0 ])
-```
-
-    [1, 20, 3, 21]
-
-
-
-```python
-print(list(filter( lambda x: x >0 , ex1)))
-```
-
-    [1, 20, 3, 21]
-
-
-
-```python
-#6. filter()와 map()을 이용해 다음 리스트에서 음수만 추출한 뒤 그 2 제곱한 값들을 가지는 리스트를 구현
-ex2 = [1, -10, -2, 20, 3, -5, -7, 21]
-```
-
-
-```python
-tmp = list(filter(lambda x: x<0, ex2))
-```
-
-
-```python
-print(list(map(lambda x: x**2, tmp)))
-```
-
-    [100, 4, 25, 49]
-
-
-
-```python
-print(list(map(lambda x : x**2, filter(lambda x: x<0, ex2)))) # tmp 넣는 대신 계산식을 그냥 넣음
-```
-
-    [100, 4, 25, 49]
-
-
-
-```python
-[ v**2 for v in ex2 if v < 0] # v 안에 ex2를 넣고 v < 0 비교 한후의 v 에 대해 **2 한다
-```
-
-
-
-
-    [100, 4, 25, 49]
-
-
->>>>>>> 77206d0f9bd7e7bff1b7a39e2f32145ee681df98
