--- a/_posts/01.Python/10.파이썬 정규표현식/2023-10-10-01.파이썬 정규표현식.md
+++ b/_posts/01.Python/10.파이썬 정규표현식/2023-10-10-01.파이썬 정규표현식.md
@@ -66,4 +66,4 @@ toc: true
 - `.` : 한개의 모든 문자(\n-줄바꿈 제외) (`a.b`)
 - `|` : 둘중 하나(OR) (?:010|011|016|019)
     - 010|016-111 : 010 또는 016-111 이 된다. 
-- `(  )` : 패턴내 하위그룹을 만들때 사용
+- `(  )` : 패턴내 하위그룹을 만들때 사용#
