--- a/_posts/05.Numpy/01.Numpy/2023-10-13-00.Numpy.md
+++ b/_posts/05.Numpy/01.Numpy/2023-10-13-00.Numpy.md
@@ -13,11 +13,6 @@ toc: true
 - Numerical Python
 - 벡터, 행렬 연산을 위한 수치해석용 파이썬 라이브러리
     - 강력한 다차원 배열(array)  지원
-    - 빠른 수치 계산을 위한 structured array, 벡터화 연산, 브로드캐스팅 기법등을 통한 다차원 배열과 행렬연산에 필요한 다양한 함수를 제공한다.
-    - 파이썬 List 보다 더 많은 데이터를 더 빠르게 처리
-- 많은 과학 연산 라이브러리들이 Numpy를 기반으로 한다.
-    - scipy, matplotlib, pandas, scikit-learn, statsmodels등
-- 선형대수, 난수 생성, 푸리에 변환 기능 지원
 
 ## 넘파이에서 데이터 구조
 - <b style='font-size:1.3em'>스칼라 (Scalar)</b>
@@ -48,10 +43,6 @@ toc: true
  - 1D Array 2 = Axis(2) -> Shape: (4, )
  - 2D Array 3.0 = Axis(0, 1) -> Shape: (2, 3)
  - 3D Array 6 = Axis(3, 1, 0) -> Shape: (4, 3, 2)
-
-![image.png](image.png)
-
-[출처: https://www.oreilly.com/library/view/elegant-scipy/9781491922927/ch01.html ]
 
 # 넘파이 배열(ndarray)
 - Numpy에서 제공하는 N 차원 배열 객체
@@ -102,7 +93,9 @@ toc: true
 |**논리형**|"bool"|np.bool|
 |**문자열**|"str"|np.str|
 
-## 임포트 넘파이
+# 넘파이(Numpy)
+
+## 임포트 넘파이(Numpy)
 
 
 ```python
