--- a/_posts/06.OpenCV/01.OpenCv/2023-10-13-00.OpenCv.md
+++ b/_posts/06.OpenCV/01.OpenCv/2023-10-13-00.OpenCv.md
@@ -2,6 +2,9 @@
 layout: single
 title: '변수와 연산자'
 typora-root-url: ../
+categories: OpenCv.01.
+tag: OpenCv
+toc: true
 ---
 
 # Image란?
@@ -33,7 +36,7 @@ typora-root-url: ../
 # 이미지 읽기
 - **`imread(filename [, flag]) : ndarray`**
     - 이미지를 읽는다.
-        
+      
     - filename: 읽어들일 이미지 파일경로
     - flag: 읽기 모드
         - cv2.IMREAD_XXXXX 상수를 이용한다.
@@ -65,7 +68,7 @@ print(img.dtype)
     <class 'numpy.ndarray'>
     (222, 296, 3)
     uint8
-    
+
 
 
 ```python
@@ -477,7 +480,7 @@ test(*'DIVX')
     ('a', 'b', 'c')
     ('DIVX',)
     ('D', 'I', 'V', 'X')
-    
+
 
 
 ```python
