--- a/_posts/06.OpenCV/02.기본영상처리/2023-10-13-00.기본 영상처리.md
+++ b/_posts/06.OpenCV/02.기본영상처리/2023-10-13-00.기본 영상처리.md
@@ -2,6 +2,9 @@
 layout: single
 title: '변수와 연산자'
 typora-root-url: ../
+categories: OpenCv.02.
+tag: OpenCv
+toc: true
 ---
 
 # 히스토그램
@@ -32,9 +35,9 @@ plt.imshow(img, cmap='gray');
 ```
 
 
-    
+​    
 ![png](output_4_0.png)
-    
+​    
 
 
 
@@ -56,7 +59,7 @@ print(hist.shape ) # index: pixcel값, value: 값
 
     <class 'numpy.ndarray'>
     (256, 1)
-    
+
 
 
 ```python
@@ -82,9 +85,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_8_0.png)
-    
+​    
 
 
 
@@ -102,7 +105,7 @@ print(lenna.shape)
 ```
 
     (512, 512, 3)
-    
+
 
 
 ```python
@@ -115,7 +118,7 @@ print(blue.shape, green.shape, red.shape)
 ```
 
     (512, 512) (512, 512) (512, 512)
-    
+
 
 
 ```python
@@ -124,7 +127,7 @@ print(type(bgr), len(bgr))
 ```
 
     <class 'tuple'> 3
-    
+
 
 
 ```python
@@ -141,9 +144,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_14_0.png)
-    
+​    
 
 
 
@@ -157,7 +160,7 @@ plt.show()
     - 원본좌표(x,y) + n
     - n이 양수면 각 좌표의 픽셀값이 커지므로 밝아진다.
     - n이 음수이면 각 좌표의 픽셀값이 작아지므로 어두워 진다.
-![image-3.png](image-3.png)
+    ![image-3.png](image-3.png)
     
 - **`cv2.add(src1, src2)`**
     - 밝기 조절이나 두 영상을 합치기에 사용할 수 있다.
@@ -209,10 +212,10 @@ plt.show()
       fig.canvas.print_figure(bytes_io, **kw)
     C:\Users\world\anaconda3\Lib\site-packages\IPython\core\pylabtools.py:152: UserWarning: Glyph 48376 (\N{HANGUL SYLLABLE BON}) missing from current font.
       fig.canvas.print_figure(bytes_io, **kw)
-    
 
 
-    
+
+
 ![png](output_20_1.png)
     
 
@@ -248,9 +251,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_22_0.png)
-    
+​    
 
 
 
@@ -385,9 +388,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_32_0.png)
-    
+​    
 
 
 
@@ -426,9 +429,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_34_0.png)
-    
+​    
 
 
 
@@ -468,9 +471,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_38_0.png)
-    
+​    
 
 
 
@@ -576,9 +579,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_48_0.png)
-    
+​    
 
 
 
@@ -590,9 +593,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_49_0.png)
-    
+​    
 
 
 
@@ -702,9 +705,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_61_0.png)
-    
+​    
 
 
 
@@ -721,9 +724,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_62_0.png)
-    
+​    
 
 
 
@@ -805,9 +808,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_70_0.png)
-    
+​    
 
 
 
@@ -850,9 +853,9 @@ plt.show()
 ```
 
 
-    
+​    
 ![png](output_73_0.png)
-    
+​    
 
 
 
