--- a/_posts/04.Pyhon 시각화/07.Pandas + 시각화 실습예제/2023-10-12-00.Pandas + Matplotlib 실습예제.md
+++ b/_posts/04.Pyhon 시각화/07.Pandas + 시각화 실습예제/2023-10-12-00.Pandas + Matplotlib 실습예제.md
@@ -7,7 +7,9 @@ tag: Pandas+시각화
 toc: true
 ---
 
-# 데이터 불러오기
+# 실습예제
+
+## 데이터 불러오기
 
 - 2022년 주유소들의 일자별 가격 데이터
 - https://www.opinet.co.kr/user/opdown/opDownload.do
@@ -3688,5 +3690,4 @@ df.query('고급휘발유!=0')[["구", "상호", "주소"]].drop_duplicates().gr
     강북구      5
     중랑구      4
     Name: 상호, dtype: int64
-
 
