--- a/_posts/05.Numpy/02.Numpy 원소,배열,연산/2023-10-13-00.Numpy 원소,배열,연산 - 복사본.md
+++ b/_posts/05.Numpy/02.Numpy 원소,배열,연산/2023-10-13-00.Numpy 원소,배열,연산 - 복사본.md
@@ -2,7 +2,7 @@
 layout: single
 title: '변수와 연산자'
 typora-root-url: ../
-categories: Numpy.02.
+categories: Numpy.02.Numpy원소,배열연산
 tag: Numpy
 toc: true
 ---
