--- a/_posts/06.OpenCV/01.OpenCv/2023-10-13-00.OpenCv.md
+++ b/_posts/06.OpenCV/01.OpenCv/2023-10-13-00.OpenCv.md
@@ -2,12 +2,12 @@
 layout: single
 title: '변수와 연산자'
 typora-root-url: ../
-categories: OpenCv.01.
+categories: OpenCv.01.OpenCv
 tag: OpenCv
 toc: true
 ---
 
-# Image란?
+# Image
 
 ## Image는 width X height X channel 의 pixels로 이루어진 matrix
 
@@ -17,17 +17,6 @@ toc: true
 - 일반적인 Image는 unsigned integer 8bit로 표현
     - 0 ~ 255 로 표현
 - bit수가 높아질 수록 표현할 수 있는 색의 범위가 증가한다.
-![image.png](image.png)
-
-# Open CV 개요
-![image.png](image.png)
-
-- https://opencv.org/
-- Open Source Computer Vision Library로 실시간 computer vision을 목적으로 개발됨.
-- Intel에서 개발하다가 open source화 됨.
-- Cross Platform으로 Windows, Mac, Linux, OS에 상관없이 동작 가능
-- C/C++로 개발 되었으나 Python, JAVA, MATLAB의 개발 환경도 지원한다.
-- 실시간에 초점을 맞추고 나온 library이기 때문에 mobile device나 로봇 등에 recognition module로 붙여 영상처리에 활용된다.
 
 # OpenCV 설치
 
@@ -94,9 +83,6 @@ cv2.destroyAllWindows()
 ```
 
 
-```python
-
-```
 
 ### matplotlib 으로 출력
 - jupyter notebook 내에 출력이 가능
@@ -105,7 +91,6 @@ cv2.destroyAllWindows()
 >    - 지정한 밀리초(1/1000 초)동안 keyboard 입력을 기다린다. 
 >    - 입력된 key 코드를 반환하며 지정된 시간동안 keyboard입력을 못받은 경우 -1을 반환한다.
 >    - argument로 0을 입력하면 keyboard 입력을 받을 때 까지 무한 대기한다.
->    - https://www.ascii-code.com/
 
 
 ```python
@@ -129,9 +114,6 @@ plt.imshow(img[:, :, ::-1]);
 ```
 
 
-```python
-
-```
 
 ## 색공간 변환
 - **`cv2.cvtColor(src, code)`**
@@ -176,9 +158,6 @@ plt.imshow(img_rgb);
 > - Hue: 색상, 색의 종류
 > - Saturation: 채도. 색의 선명도
 > - Value : 명도. 밝기
-
-![image.png](image.png)
-![image-2.png](image-2.png)
 
 > - color를 gray로 변환하면 색정보를 손실하는 단점이 있지만 저장용량을 줄이고 처리속도를 향상시킬 수 있다.
 > - gray 로 변환 : rgb를 더하는데 opencv는 다음과 같이 가중치를 줘서 더한다.
@@ -267,9 +246,6 @@ cv2.imwrite('output/img3.jpg', img3)
 ```
 
 
-```python
-
-```
 
 # 동영상 처리
 
@@ -293,8 +269,6 @@ cv2.imwrite('output/img3.jpg', img3)
 
 > - **주의**
 > - 맥에서 웹캠연결
->     - mac 시스템 환경 설정에 보안 및 개인 정보 보호에서 카메라 관련 권한 설정필요. 
->     - [출처](https://hoony-gunputer.tistory.com/entry/opencv-python-비디오-읽고-쓰기)
 > 
 
 
@@ -343,11 +317,11 @@ cv2.destroyAllWindows()
 ```
 
 
-```python
 
-```
+# 실습예제 
 
-# TODO: 웹캠에서 입력된 이미지를 화면에 보여주면서 파일로 저장
+웹캠에서 입력된 이미지를 화면에 보여주면서 파일로 저장
+
 - 30장당 한장씩 저장한다.
 - 파일형식: output_capture/cap_번호.jpg
 
@@ -402,9 +376,6 @@ cv2.destroyAllWindows()
 ```
 
 
-```python
-
-```
 
 ### 동영상 재생
 
@@ -455,7 +426,6 @@ cv2.destroyAllWindows()
         - filename: 저장경로
         - codec
             - VideoWriter_fourcc 이용
-            ![image.png](image.png)
         - fps
             - FPS (Frame Per Second) - 초당 몇 프레임인지 지정
         - size
@@ -524,7 +494,3 @@ writer.release()
 cv2.destroyAllWindows()
 ```
 
-
-```python
-
-```
