--- a/_posts/06.OpenCV/02.기본영상처리/2023-10-13-00.기본 영상처리.md
+++ b/_posts/06.OpenCV/02.기본영상처리/2023-10-13-00.기본 영상처리.md
@@ -2,7 +2,7 @@
 layout: single
 title: '변수와 연산자'
 typora-root-url: ../
-categories: OpenCv.02.
+categories: OpenCv.02.기본영상처리
 tag: OpenCv
 toc: true
 ---
