--- a/_posts/06.OpenCV/03.도형그리기 이미지이동/2023-10-13-00.도형그리기 이미지이동.md
+++ b/_posts/06.OpenCV/03.도형그리기 이미지이동/2023-10-13-00.도형그리기 이미지이동.md
@@ -2,7 +2,7 @@
 layout: single
 title: '도형그리기 이미지이동'
 typora-root-url: ../
-categories: OpenCv.03
+categories: OpenCv.03.도형그리기와이미지이동
 tag: OpenCv
 toc: true
 ---
